phpMyFAQ 2.6.18
Codename "Portia"

CHANGELOG

This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.6.18 - 2011-07-
- updated Spanish translation

Version 2.6.17 - 2011-06-08
- updated Portuguese translation
- fixed minor bugs (Thorsten)

Version 2.6.16 - 2011-05-31
- updated Portuguese translation
- updated Dutch translation
- fixed minor bugs (Thorsten)

Version 2.6.15 - 2011-02-23
- added Malay translation (Ahmad Kamil Zailani)
- updated Danish translation
- updated Brazilian Portuguese translation
- updated Spanish translation (Martin Schenk)
- fixed minor bugs (Thorsten)

Version 2.6.14 - 2011-01-24
- added rewrite rules for nginx (Florian Anderiasch)
- added compatibility for MySQL 5.5 with ext/mysql (Thorsten)
- added support to ban IPs from user tracking files (Thorsten)
- improved restore functionality (Thorsten)
- updated Dutch translation (Hans)
- updated German translation (Thorsten)
- Fixed issue with sending mails to category administrators (Gustavo Solt)
- fixed minor bugs (Thorsten)

Version 2.6.13 - 2010-12-15
- clean package after compromised server (Thorsten)

Version 2.6.12 - 2010-12-13
- added experimental support for MariaDB (Thorsten)
- added empty LDAP configuration file as example (Thorsten)
- updated Arabic translation
- updated Dutch translation (Werner Helmich)
- updated French translation
- updated Norwegian Bokmål translation (harald@delelisten.no)
- fixed minor bugs (Thorsten, Gustavo Solt)

Version 2.6.11 - 2010-11-03
- fixed some bugs introduced with phpMyFAQ 2.6.10 (Thorsten)

Version 2.6.10 - 2010-11-02
- added several security enhancements (Thorsten)
- updated Chinese (Simplified) translation
- updated German translation (Thorsten)
- updated Portuguese translation (Fernando G. Monteiro)
- fixed minor bugs (Thorsten)

Version 2.6.9 - 2010-09-28
- fixed XSS vulnerability (Yam Mesicka, Thorsten)
- added Slovak translation (Tibor)
- added minor usability improvement in administration backend (Thorsten)