@@ -7,6 +7,7 @@ This is a log of major user-visible changes in each phpMyFAQ release.
 
 Version 2.6.18 - 2011-07-
 - updated Spanish translation
+- fixed Danish translation
 
 Version 2.6.17 - 2011-06-08
 - updated Portuguese translation
